--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,10 +46,6 @@ header .navbar-brand {
   color: #ffca00!important;
 }
 
-main {
-  min-height: 50vh;
-}
-
 #outbreak-solution h1,
 #about-us-header h1,
 #milestones-header h1,
@@ -185,6 +181,10 @@ footer {
   color: rgba(255, 202, 0, 1);
 }
 
+.tabulator {
+  border-bottom: 5px solid #ffca00;
+}
+
 .tabulator .tabulator-header .tabulator-col.tabulator-sortable[aria-sort="asc"] .tabulator-col-content .tabulator-arrow {
   border-top: none;
   border-bottom: 6px solid #ffca00;
@@ -195,7 +195,7 @@ footer {
 }
 
 .tabulator .tabulator-header {
-  border-bottom: 3px solid #ffca00;
+  border-bottom: 5px solid #ffca00;
 }
 
 .topBarMargin {
