--- a/public/css/compiled/store.css
+++ b/public/css/compiled/store.css
@@ -1,1 +1,17 @@
-#product-container h1{font-size:1.8rem;text-align:left;font-weight:700;letter-spacing:2px;position:relative}.product-description{color:#efefef;font-size:.9rem}.product-price{font-size:1.5rem;color:#ffca00}
+#product-container h1 {
+  font-size: 1.8rem;
+  text-align: left;
+  font-weight: 700;
+  letter-spacing: 2px;
+  position: relative;
+}
+
+.product-description {
+  color: #efefef;
+  font-size: 0.9rem;
+}
+
+.product-price {
+  font-size: 1.5rem;
+  color: #ffca00;
+}
