bug fix to handle non pc membershiptype

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -190,6 +190,10 @@ footer {
   border: 0;
 }
 
+.tabulator a {
+  text-decoration: underline;
+}
+
 #stats-sub-menu li > a {
   color: rgba(255, 255, 255, 0.5);
 }
