--- a/public/css/compiled/clan.css
+++ b/public/css/compiled/clan.css
@@ -1,1 +1,57 @@
-h1{font-size:1.3rem;font-weight:700;letter-spacing:2px;margin:0;position:relative}h2.stats-container-header{font-size:1.3rem;font-weight:700;letter-spacing:2px;margin:0;position:relative}#sub-menu{display:none}#sub-menu .nav-item{text-align:left}#sub-menu .nav-link{padding:.5rem 0}#sub-menu .nav-link:hover,.nav-link:focus{text-decoration:underline}i.fa-times{opacity:.7}#clan-sub-menu li>a{color:rgba(255,255,255,.5)}#clan-sub-menu li>a.active{color:rgba(255,202,0,1)}#clan-sub-menu h1{font-size:inherit;letter-spacing:inherit;line-height:inherit}.tabulator-table a,.tabulator-table a:active,.tabulator-table a:focus,.tabulator-table a:hover{color:inherit;text-decoration:underline}
+h1 {
+  font-size: 1.3rem;
+  font-weight: 700;
+  letter-spacing: 2px;
+  margin: 0;
+  position: relative;
+}
+
+h2.stats-container-header {
+  font-size: 1.3rem;
+  font-weight: 700;
+  letter-spacing: 2px;
+  margin: 0;
+  position: relative;
+}
+
+#sub-menu {
+  display: none;
+}
+
+#sub-menu .nav-item {
+  text-align: left;
+}
+
+#sub-menu .nav-link {
+  padding: .5rem 0rem;
+}
+
+#sub-menu .nav-link:hover, .nav-link:focus {
+  text-decoration: underline;
+}
+
+i.fa-times {
+  opacity: 0.7;
+}
+
+#clan-sub-menu li>a {
+  color: rgba(255,255,255,.5);
+}
+
+#clan-sub-menu li>a.active {
+  color: rgba(255,202,0,1);
+}
+
+#clan-sub-menu h1 {
+  font-size: inherit;
+  letter-spacing: inherit;
+  line-height: inherit;
+}
+
+.tabulator-table a,
+.tabulator-table a:active,
+.tabulator-table a:focus,
+.tabulator-table a:hover {
+  color: inherit;
+  text-decoration: underline;
+}
