--- a/public/css/style.css
+++ b/public/css/style.css
@@ -388,11 +388,11 @@ section#members-online {
   border-radius: 3px;
   background-color: #65bd63;
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9dd993), color-stop(100%, #65bd63));
-  background-image: -webkit-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -moz-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -ms-linear-gradient(top, #9dd993, #65bd63);
-  background-image: -o-linear-gradient(top, #9dd993, #65bd63);
-  background-image: linear-gradient(top, #9dd993, #65bd63);
+  background-image: -webkit-linear-gradient(to bottom, #9dd993, #65bd63);
+  background-image: -moz-linear-gradient(to bottom, #9dd993, #65bd63);
+  background-image: -ms-linear-gradient(to bottom, #9dd993, #65bd63);
+  background-image: -o-linear-gradient(to bottom, #9dd993, #65bd63);
+  background-image: linear-gradient(to bottom, #9dd993, #65bd63);
   -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
   box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
   -webkit-transition: left 0.15s ease-out;
