--- a/public/css/post.css
+++ b/public/css/post.css
@@ -42,8 +42,8 @@ li.breadcrumb-item.active a span {
 #guide-post-content img {
   width: auto;
   height: auto;
-  max-height: 100vh;
-  max-width: 100%;
+  /* max-height: 100vh; */
+  max-width: 80%;
   border: 1px solid #fff;
   padding: 5px;
 }
