--- a/public/css/autoprefix/style.css
+++ b/public/css/autoprefix/style.css
@@ -1,448 +1,1 @@
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  color: #fff;
-}
-
-body:after {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 100vh;
-  z-index: -1;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)), url(/images/traveler-bg.jpg);
-  background-position: center;
-  background-size: cover;
-}
-
-a, a:hover, a:active, a:focus {
-  color: #ffca00;
-}
-
-smaller, .smaller {
-  font-size: 70%;
-}
-
-#headerNav {
- font-size: 1.2rem;
- letter-spacing: 1.5px;
-}
-
-header .navbar-brand {
-  display: none;
-  color: #ffca00!important;
-  letter-spacing: 1px;
-  position: relative;
-  font-size: 1.5rem;
-  left: 5px;
-  top: 2px;
-}
-
-#headerNav > ul > li.nav-item {
- cursor: pointer;
-}
-
-#headerNav > ul > li.nav-item.active > a {
-  color: #ffca00!important;
-  text-decoration: none;
-}
-
-#guides-header h1,
-#outbreak-solution h1,
-#about-us-header h1,
-#milestones-header h1,
-#news-header h1 {
-  font-size: 1.3rem;
-  text-align: left;
-  font-weight: 700;
-  letter-spacing: 2px;
-  margin: 0;
-  position: relative;
-}
-
-#milestones-header-icon {
-  width:50px; /*width of your image*/
-  height:50px; /*height of your image*/
-  background-image:url('/images/icons/cayde.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-  position: relative;
-  bottom: 5px;
-  right: 5px;
-}
-
-#news-header-icon {
-  width:45px; /*width of your image*/
-  height:45px; /*height of your image*/
-  background-image:url('/images/icons/news.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-  position: relative;
-  bottom: 5px;
-  right: 5px;
-}
-
-#latest-post-header-icon {
-  width: 50px;
-  height: 50px;
-  background-image: url(/images/icons/xur.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-  position: relative;
-  bottom: 5px;
-  right: 5px;
-}
-
-#about-us-header h1 {
-  left: 5px;
-}
-
-#about-us-header-icon {
-  width:50px; /*width of your image*/
-  height:50px; /*height of your image*/
-  background-image:url('/images/icons/amanda-flip.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-  position: relative;
-  bottom: 5px;
-  right: 5px;
-}
-
-.grid-item > div,
-.traits-box {
-  background: rgba(0, 0, 0, 0.5)
-}
-
-.traits-title {
-  position: absolute;
-  top: -10px;
-  background: #ffca00;
-  color: #000;
-  font-size: 0.8rem;
-  font-weight: 700;
-}
-
-.traits-title i {
-  position: relative;
-  top: 1px;
-}
-
-.vendor-item:hover {
-  cursor: pointer;
-}
-.tooltip-inner {
-  text-align: left;
-  font-size: 12px;
-  line-height: 16px;
-  max-width: 300px;
-}
-.tooltip-inner .perk-description {
-  font-size: 12px;
-  line-height: 14px;
-}
-.tooltip.show {
-  opacity: 1;
-}
-.tooltip-icon {
-  width: 50px;
-  height: 50px;
-}
-
-footer {
-  font-size: 90%;
-  line-height: 1rem;
-}
-
-.border-yellow {
-  border: 1px solid #ffca00!important;
-}
-
-.text-yellow {
-  color: #ffca00;
-}
-
-.loader-text {
-  font-style: normal;
-  letter-spacing: 2px;
-}
-
-.loader {
-  width:100px; /*width of your image*/
-  height:100px; /*height of your image*/
-  background-image:url('/images/ghost-loader-sm.gif?ver=1');
-  background-repeat: no-repeat;
-  background-size: contain;
-  margin: 0 auto;
-}
-
-.navbar-expand-lg .navbar-nav .nav-link {
-  padding-right: .8rem;
-  padding-left: .8rem;
-}
-
-#outbreak-solution iframe {
-  width: 100%;
-  min-height: 800px;
-  border: 0;
-}
-
-.tabulator a {
-  text-decoration: underline;
-}
-
-#stats-sub-menu li > a {
-  color: rgba(255, 255, 255, 0.5);
-}
-
-#stats-sub-menu li > a.active {
-  color: rgba(255, 202, 0, 1);
-}
-
-.tabulator {
-  border-bottom: 5px solid #ffca00;
-}
-
-.tabulator .tabulator-header .tabulator-col.tabulator-sortable[aria-sort="asc"] .tabulator-col-content .tabulator-arrow {
-  border-top: none;
-  border-bottom: 6px solid #ffca00;
-}
-.tabulator .tabulator-header .tabulator-col.tabulator-sortable[aria-sort="desc"] .tabulator-col-content .tabulator-arrow {
-  border-top: 6px solid #ffca00;
-  border-bottom: none;
-}
-
-.tabulator .tabulator-header {
-  border-bottom: 5px solid #ffca00;
-}
-
-.topBarMargin {
-  margin-top: 2.3rem!important;
-}
-
-.no-scroll {
-  overflow: hidden;
-}
-
-.overlay {
-  position: fixed;
-  overflow-y: scroll;
-  top: 0; right: 0; bottom: 0; left: 0;
- }
-
-section#members-online {
-  display: none;
-  cursor: pointer;
-  position: fixed;
-  top: 0;
-  background: rgba(0,0,0,0.9);
-  z-index: 1080;
-}
-
-#members-online-toggle-icon {
-  position: fixed;
-  right: 0;
-  padding-top: 3px;
-}
-
-#members-online-text {
-  font-size: 0.9rem;
-}
-
-#members-online-table {
-  display: none;
-  height: 100vh;
-}
-
-#members-online-table table {
-  font-size: 80%;
-  margin: 0 auto;
-  z-index: 999;
-}
-
-#destiny-news-container,
-#division-news-container,
-#magic-news-container {
-  font-size: 0.8rem;
-}
-
-#destiny-news-container h2,
-#division-news-container h2,
-#magic-news-container h2 {
-  font-size: 1rem;
-}
-
-#guides .post-category {
-  top: 0;
-  right: 0;
-  padding: 4px 10px;
-  color: #fff;
-  width: 100%;
-  font-size: .7rem;
-  letter-spacing: 1px;
-}
-
-#guides .guides-posts-tn {
-  height: 140px;
-  position: relative;
-}
-
-#guides a,
-#guides a:hover,
-#guides a:active,
-#guides a:focus {
-  text-decoration: none;
-}
-
-#guides .guides-posts-item:hover {
-  opacity: 0.9;
-}
-
-#guides .guides-posts-item .guides-posts-title {
-  border-top: 5px solid #b78c25;
-  position: relative;
-  text-transform: capitalize;
-}
-
-#guides .guides-posts-item .guides-posts-title small {
-  font-weight: 700;
-  line-height: 1rem;
-  position: relative;
-}
-
-/* auto refresh toggle */
-
-.switch {
-  position: relative;
-  height: 26px;
-  width: 120px;
-  background: rgba(0, 0, 0, 0.25);
-  border-radius: 3px;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
-}
-
-.switch-label {
-  position: relative;
-  z-index: 2;
-  float: left;
-  width: 58px;
-  line-height: 26px;
-  font-size: 11px;
-  color: rgba(255, 255, 255, 0.35);
-  text-align: center;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.45);
-  cursor: pointer;
-}
-.switch-label:active {
-  font-weight: bold;
-}
-
-.switch-label-off {
-  padding-left: 2px;
-}
-
-.switch-label-on {
-  padding-right: 2px;
-}
-
-
-.switch-input {
-  display: none;
-}
-.switch-input:checked + .switch-label {
-  font-weight: bold;
-  color: rgba(0, 0, 0, 0.65);
-  text-shadow: 0 1px rgba(255, 255, 255, 0.25);
-  transition: 0.15s ease-out;
-  transition-property: color, text-shadow;
-}
-.switch-input:checked + .switch-label-on ~ .switch-selection {
-  left: 60px;
-  /* Note: left: 50%; doesn't transition in WebKit */
-}
-
-.switch-selection {
-  position: absolute;
-  z-index: 1;
-  top: 2px;
-  left: 2px;
-  display: block;
-  width: 58px;
-  height: 22px;
-  border-radius: 3px;
-  background-color: #65bd63;
-  background-image: linear-gradient(to bottom, #9dd993, #65bd63);
-  box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
-  transition: left 0.15s ease-out;
-}
-
-header .drop-down-menu {
-  display: none;
-  position: absolute;
-  background: rgba(0,0,0,0.98);
-  font-size: 1rem;
-  line-height: 1;
-  z-index: 4;
-  cursor: pointer;
-}
-header nav li.nav-item:hover div.drop-down-menu {
-  display: block;
-}
-div.drop-down-menu ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-header .drop-down-menu a {
-  color: rgba(255,255,255,.5);
-  display: block;
-  padding: 12px 15px;
-}
-header .drop-down-menu a:hover,
-header .drop-down-menu a:focus,
-header .drop-down-menu a:active {
-  text-decoration: none;
-  color: #ffca00!important;
-}
-
-/* Extra small devices (portrait phones, less than 576px) */
-@media (max-width: 575.98px) {
-}
-
-/* Small devices (landscape phones, less than 768px) */
-@media (max-width: 767.98px) {
-  #weeklies-item-container .grid-item {
-    width: 100%;
-  }
-  #headerNav .nav-link i {
-    display: none;
-  }
-  .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: 0;
-    padding-left: 0;
-  }
-  header .navbar-brand {
-    display: block;
-  }
-  .mobile-hide {
-    display: none!important;
-  }
-  header .drop-down-menu {
-    display: block;
-    position: relative;
-    background: inherit;
-    border: none!important;
-  }
-}
-
-/* Medium devices (tablets, less than 992px) */
-@media (max-width: 991.98px) {
-}
-
-/* Large devices (desktops, less than 1200px) */
-@media (max-width: 1199.98px) {
-}
+html{scroll-behavior:smooth}body{font-family:Open Sans,sans-serif;color:#fff}body:after{content:"";position:fixed;top:0;left:0;right:0;height:100vh;z-index:-1;background-image:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.9)),url(/images/traveler-bg.jpg);background-position:50%;background-size:cover}a,a:active,a:focus,a:hover{color:#ffca00}.smaller,smaller{font-size:70%}#headerNav{font-size:1.2rem;letter-spacing:1.5px}header .navbar-brand{display:none;color:#ffca00!important;letter-spacing:1px;position:relative;font-size:1.5rem;left:5px;top:2px}#headerNav>ul>li.nav-item{cursor:pointer}#headerNav>ul>li.nav-item.active>a{color:#ffca00!important;text-decoration:none}#about-us-header h1,#guides-header h1,#milestones-header h1,#news-header h1,#outbreak-solution h1{font-size:1.3rem;text-align:left;font-weight:700;letter-spacing:2px;margin:0;position:relative}#milestones-header-icon{width:50px;height:50px;background-image:url(/images/icons/cayde.png)}#milestones-header-icon,#news-header-icon{background-repeat:no-repeat;background-size:contain;position:relative;bottom:5px;right:5px}#news-header-icon{width:45px;height:45px;background-image:url(/images/icons/news.png)}#latest-post-header-icon{width:50px;height:50px;background-image:url(/images/icons/xur.png);background-repeat:no-repeat;background-size:contain;position:relative;bottom:5px;right:5px}#about-us-header h1{left:5px}#about-us-header-icon{width:50px;height:50px;background-image:url(/images/icons/amanda-flip.png);background-repeat:no-repeat;background-size:contain;position:relative;bottom:5px;right:5px}.grid-item>div,.traits-box{background:rgba(0,0,0,.5)}.traits-title{position:absolute;top:-10px;background:#ffca00;color:#000;font-size:.8rem;font-weight:700}.traits-title i{position:relative;top:1px}.vendor-item:hover{cursor:pointer}.tooltip-inner{text-align:left;font-size:12px;line-height:16px;max-width:300px}.tooltip-inner .perk-description{font-size:12px;line-height:14px}.tooltip.show{opacity:1}.tooltip-icon{width:50px;height:50px}footer{font-size:90%;line-height:1rem}.border-yellow{border:1px solid #ffca00!important}.text-yellow{color:#ffca00}.loader-text{font-style:normal;letter-spacing:2px}.loader{width:100px;height:100px;background-image:url(/images/ghost-loader-sm.gif?ver=1);background-repeat:no-repeat;background-size:contain;margin:0 auto}.navbar-expand-lg .navbar-nav .nav-link{padding-right:.8rem;padding-left:.8rem}#outbreak-solution iframe{width:100%;min-height:800px;border:0}.tabulator a{text-decoration:underline}#stats-sub-menu li>a{color:hsla(0,0%,100%,.5)}#stats-sub-menu li>a.active{color:#ffca00}.tabulator{border-bottom:5px solid #ffca00}.tabulator .tabulator-header .tabulator-col.tabulator-sortable[aria-sort=asc] .tabulator-col-content .tabulator-arrow{border-top:none;border-bottom:6px solid #ffca00}.tabulator .tabulator-header .tabulator-col.tabulator-sortable[aria-sort=desc] .tabulator-col-content .tabulator-arrow{border-top:6px solid #ffca00;border-bottom:none}.tabulator .tabulator-header{border-bottom:5px solid #ffca00}.topBarMargin{margin-top:2.3rem!important}.no-scroll{overflow:hidden}.overlay{position:fixed;overflow-y:scroll;top:0;right:0;bottom:0;left:0}section#members-online{display:none;cursor:pointer;position:fixed;top:0;background:rgba(0,0,0,.9);z-index:1080}#members-online-toggle-icon{position:fixed;right:0;padding-top:3px}#members-online-text{font-size:.9rem}#members-online-table{display:none;height:100vh}#members-online-table table{font-size:80%;margin:0 auto;z-index:999}#destiny-news-container,#division-news-container,#magic-news-container{font-size:.8rem}#destiny-news-container h2,#division-news-container h2,#magic-news-container h2{font-size:1rem}#guides .post-category{top:0;right:0;padding:4px 10px;color:#fff;width:100%;font-size:.7rem;letter-spacing:1px}#guides .guides-posts-tn{height:140px;position:relative}#guides a,#guides a:active,#guides a:focus,#guides a:hover{text-decoration:none}#guides .guides-posts-item:hover{opacity:.9}#guides .guides-posts-item .guides-posts-title{border-top:5px solid #b78c25;position:relative;text-transform:capitalize}#guides .guides-posts-item .guides-posts-title small{font-weight:700;line-height:1rem;position:relative}.switch{position:relative;height:26px;width:120px;background:rgba(0,0,0,.25);border-radius:3px;box-shadow:inset 0 1px 3px rgba(0,0,0,.3),0 1px hsla(0,0%,100%,.1)}.switch-label{position:relative;z-index:2;float:left;width:58px;line-height:26px;font-size:11px;color:hsla(0,0%,100%,.35);text-align:center;text-shadow:0 1px 1px rgba(0,0,0,.45);cursor:pointer}.switch-label:active{font-weight:700}.switch-label-off{padding-left:2px}.switch-label-on{padding-right:2px}.switch-input{display:none}.switch-input:checked+.switch-label{font-weight:700;color:rgba(0,0,0,.65);text-shadow:0 1px hsla(0,0%,100%,.25);transition:.15s ease-out;transition-property:color,text-shadow}.switch-input:checked+.switch-label-on~.switch-selection{left:60px}.switch-selection{position:absolute;z-index:1;top:2px;left:2px;display:block;width:58px;height:22px;border-radius:3px;background-color:#65bd63;background-image:linear-gradient(180deg,#9dd993,#65bd63);box-shadow:inset 0 1px hsla(0,0%,100%,.5),0 0 2px rgba(0,0,0,.2);transition:left .15s ease-out}header .drop-down-menu{display:none;position:absolute;background:rgba(0,0,0,.98);font-size:1rem;line-height:1;z-index:4;cursor:pointer}header nav li.nav-item:hover div.drop-down-menu{display:block}div.drop-down-menu ul{list-style-type:none;margin:0;padding:0}header .drop-down-menu a{color:hsla(0,0%,100%,.5);display:block;padding:12px 15px}header .drop-down-menu a:active,header .drop-down-menu a:focus,header .drop-down-menu a:hover{text-decoration:none;color:#ffca00!important}@media (max-width:767.98px){#weeklies-item-container .grid-item{width:100%}#headerNav .nav-link i{display:none}.navbar-expand-lg .navbar-nav .nav-link{padding-right:0;padding-left:0}header .navbar-brand{display:block}.mobile-hide{display:none!important}header .drop-down-menu{display:block;position:relative;background:inherit;border:none!important}}
