front page update

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -317,89 +317,22 @@ section#members-online {
   position: relative;
 }
 
-/* auto refresh toggle */
-
-.switch {
-  position: relative;
-  height: 26px;
-  width: 120px;
-  background: rgba(0, 0, 0, 0.25);
-  border-radius: 3px;
-  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+li.breadcrumb-item.active a span {
+  font-style: italic;
 }
 
-.switch-label {
-  position: relative;
-  z-index: 2;
-  float: left;
-  width: 58px;
-  line-height: 26px;
-  font-size: 11px;
-  color: rgba(255, 255, 255, 0.35);
-  text-align: center;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.45);
-  cursor: pointer;
-}
-.switch-label:active {
-  font-weight: bold;
+.breadcrumb-item+.breadcrumb-item::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f054";
+  font-size: 0.8rem;
 }
 
-.switch-label-off {
-  padding-left: 2px;
-}
-
-.switch-label-on {
-  padding-right: 2px;
-}
-
-
-.switch-input {
-  display: none;
-}
-.switch-input:checked + .switch-label {
-  font-weight: bold;
-  color: rgba(0, 0, 0, 0.65);
-  text-shadow: 0 1px rgba(255, 255, 255, 0.25);
-  -webkit-transition: 0.15s ease-out;
-  -moz-transition: 0.15s ease-out;
-  -ms-transition: 0.15s ease-out;
-  -o-transition: 0.15s ease-out;
-  transition: 0.15s ease-out;
-  -webkit-transition-property: color, text-shadow;
-  -moz-transition-property: color, text-shadow;
-  -ms-transition-property: color, text-shadow;
-  -o-transition-property: color, text-shadow;
-  transition-property: color, text-shadow;
-}
-.switch-input:checked + .switch-label-on ~ .switch-selection {
-  left: 60px;
-  /* Note: left: 50%; doesn't transition in WebKit */
-}
-
-.switch-selection {
-  position: absolute;
-  z-index: 1;
-  top: 2px;
-  left: 2px;
-  display: block;
-  width: 58px;
-  height: 22px;
-  border-radius: 3px;
-  background-color: #65bd63;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9dd993), color-stop(100%, #65bd63));
-  background-image: -webkit-linear-gradient(to bottom, #9dd993, #65bd63);
-  background-image: -moz-linear-gradient(to bottom, #9dd993, #65bd63);
-  background-image: -ms-linear-gradient(to bottom, #9dd993, #65bd63);
-  background-image: -o-linear-gradient(to bottom, #9dd993, #65bd63);
-  background-image: linear-gradient(to bottom, #9dd993, #65bd63);
-  -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
-  box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
-  -webkit-transition: left 0.15s ease-out;
-  -moz-transition: left 0.15s ease-out;
-  -ms-transition: left 0.15s ease-out;
-  -o-transition: left 0.15s ease-out;
-  transition: left 0.15s ease-out;
+.children-item+.children-item::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "/";
+  font-size: 0.8rem;
 }
 
 header .drop-down-menu {
@@ -429,6 +362,22 @@ header .drop-down-menu a:focus,
 header .drop-down-menu a:active {
   text-decoration: none;
   color: #ffca00!important;
+}
+
+header .drop-down-menu li.nav-item.active>a {
+  color: #ffca00;
+}
+
+.color-arc {
+  color: #8DCCEE;
+}
+
+.color-solar {
+  color: #F57B2E;
+}
+
+.color-void {
+  color: #BB8ED7;
 }
 
 /* Extra small devices (portrait phones, less than 576px) */
