--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,33 @@
+@font-face {
+  font-family: 'DestinySymbols';
+  src: url('/css/fonts/DestinySymbolsXbox.eot');
+  src: url('/css/fonts/DestinySymbolsXbox.eot?#iefix') format('embedded-opentype'),
+      url('/css/fonts/DestinySymbolsXbox.woff2') format('woff2'),
+      url('/css/fonts/DestinySymbolsXbox.woff') format('woff'),
+      url('/css/fonts/DestinySymbolsXbox.ttf') format('truetype'),
+      url('/css/fonts/DestinySymbolsXbox.svg#DestinySymbolsXbox') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'DestinyKeys';
+  src: url('/css/fonts/DestinyKeys.eot');
+  src: url('/css/fonts/DestinyKeys.eot?#iefix') format('embedded-opentype'),
+      url('/css/fonts/DestinyKeys.woff2') format('woff2'),
+      url('/css/fonts/DestinyKeys.woff') format('woff'),
+      url('/css/fonts/DestinyKeys.ttf') format('truetype'),
+      url('/css/fonts/DestinyKeys.svg#DestinyKeys') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', 'DestinySymbols', 'DestinyKeys', sans-serif;
   color: #fff;
 }
 
